# ads-backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  base.pip  compose.yml  dev.pip  make_celery.py  mongo-init.sh  pyproject.toml
.github/workflows/: ci.yml
ads/: __init__.py  auth.py  db.py  default_settings.py  prediction.py  schema.sql  tasks.py
ads/static/: ourteam.css  script.js  style.css
ads/templates/: base.html  index.html  ourteam.html
ads/templates/auth/: login.html  register.html
scripts/: run-coverage.sh  run-tests.sh  update-dependencies.sh
tests/: conftest.py  test_auth.py  test_factory.py  test_prediction.py
